# JIRA-BE

./: .gitignore  LICENSE  README.md  nginx.conf  pyproject.toml  requirements.txt
.ebextensions/: 01_install_poetry.config
api-docs/: openapi.yaml
app/: main.py
app/api/: api.py
app/api/v1/: router.py
app/core/: config.py  security.py
app/crud/attachments/: delete_attachments.py  get_attachments.py  post_attachments.py
app/crud/authentication/: auth_login.py  auth_sign_in.py
app/crud/comments/: get_comment.py  post_comment.py  put_comments.py
app/crud/notifications/: get_notification.py  put_notification.py
app/crud/projects/: delete_project_id.py  get_project_id.py  projects_get.py  projects_post.py  put_project_id.py
app/crud/tasks/: delete_task_id.py  get_task_id.py  get_tasks.py  post_tasks.py  put_task_id.py
app/db/: base.py  session.py
app/models/: attachment.py  comment.py  notification.py  project.py  task.py  user.py
app/schemas/attachments/: get_attachments.py
app/schemas/authentication/: auth_login.py  auth_sign_in.py  user_get.py
app/schemas/comments/: get_comment.py  post_comment.py  put_comments.py
app/schemas/notifications/: get_notification.py
app/schemas/projects/: get_project_id.py  projects_get.py  projects_post.py  put_project_id.py
app/schemas/tasks/: get_task_id.py  get_tasks.py  post_tasks.py  put_task_id.py
app/services/attachments/: delete_attachments.py  get_attachments.py  post_attachments.py
app/services/authentication/: auth_login.py  logout.py  user_get.py
app/services/comments/: get_comment.py  post_comment.py  put_comments.py
app/services/notifications/: get_notification.py  put_notification.py
app/services/projects/: delete_project_id.py  (+4 more)
(+27 files in other folders)
