[tool.poetry]
name = "JIRA-BE"
version = "0.1.0"
description = "A backend application for managing a tool similar to Jira or Trello"
authors = ["FrankDannie <frank.dannie@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.12"
azure-identity = "^1.14.0"
azure-keyvault-secrets = "^4.7.0"
poethepoet = "^0.22.1"
snowflake-snowpark-python = "1.9.0"
fastapi = "0.109.0"
uvicorn = "0.27.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "<2.0.0"
snowflake-sqlalchemy = "^1.5.1"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"
aiofiles = "^0.8.0"
python-dateutil = "^2.9.0"
apscheduler = "^3.10.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pylint = "^2.17.5"
autopep8 = "^2.0.4"
pytest = "^7.4.1"
black = "^24.2.0"
isort = "^5.13.2"
aiofiles = "^0.8.0"
pytest-asyncio = "^0.19.0"
httpx = "^0.27.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
exclude = '''
/(
    migrations|
    migrations/versions
)/
'''


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install_pre_commit = "pre-commit install"
lint = "pylint app/"
prettify = "black app"
pytest = "pytest --cov=app.main"
dev = "uvicorn app.main:app --host 0.0.0.0 --reload --port 8000"
prod = "uvicorn app.main:app --host 0.0.0.0 --reload --port 8000"

